# copilot-lexical

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  serve.js  vite.config.ts
.github/workflows/: deploy.yml
conda-recipe/: README.md  meta.yaml
copilot_lexical/: __init__.py  __main__.py
dev/sh/: sync-all.sh  sync-core.sh  sync-jupyter-packages.sh
scripts/: setup-deps.js
src/: App.css  App.tsx  editorConfig.ts  index.css  main.tsx  theme.ts  vite-env.d.ts
src/styles/: lexical-theme.css  modal-overrides.css
src/tools/adapters/copilotkit/: CopilotKitToolAdapter.ts  lexicalHooks.tsx
